--- a/src/Makefile
+++ b/src/Makefile
@@ -9,7 +9,7 @@ BUILD_DIR=../output
 
 SOURCES=boot.o kernel.o screen.o port.o stdio.o string.o gdt_idt.o \
 		gdt_idt_asm.o timer.o irq.o mem.o list.o emulator.o test.o \
-		page.o
+		page.o page_asm.o
 
 
 all: $(SOURCES) link
